<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Niewolnik Maryi</string>
    <string name="admob_app_id">ca-app-pub-8612826840770530~1488152896</string>
    <string name="admob_interstitial_id">ca-app-pub-8612826840770530/6762686648</string>
    <string name="banner_ad_unit_id">ca-app-pub-8612826840770530/1409968130</string>

    <string name="main_button1">Treaty</string>
    <string name="main_button2">Prayers</string>
    <string name="main_button3">Novenas</string>
    <string name="main_button4">Messages</string>
    <string name="main_button5">Settings</string>
    <string name="main_button6">Support the project ↗</string>

    <string name="main_textView_text">Victory, when it comes, will come through Mary - Cardinal August Hlond</string>

    <string name="traktat_button1">Discussing</string>
    <string name="traktat_button2">Period 12 Days</string>
    <string name="traktat_button3">Part One</string>
    <string name="traktat_button4">Part Two</string>
    <string name="traktat_button5">Part Three</string>
    <string name="traktat_button6">Act of devotion</string>
    <string name="traktat_button7">Deadlines</string>

    <string name="settings_textView1">App Theme</string>
    <string name="settings_textView2">Text</string>
    <string name="settings_textView3">Language selection</string>

    <string name="settings_button1">Information</string>
    <string name="settings_button2">Other applications</string>
    <string name="settings_button3">Rate app</string>
    <string name="settings_button4">Donate</string>

    <string name="kofi_text1">If you enjoy using my Android app and would like to show your support, you can buy me a virtual coffee through Ko-fi. Every coffee is a big motivation for me to keep improving, fixing bugs, and adding new features. Thank you for your support – even the smallest gesture makes a difference!</string>
    <string name="kofi_text2">Click to go to the website</string>
    <string name="kofi_text3">Buy coffe</string>

    <string name="error">Unable to find market app</string>
    <string name="help_text">Hi. Please help me develop my applications by watching a short advertisement. Thank you. I am an unfaithful sinner…</string>
    <string name="help_button">Donate</string>
    <string name="Twelfth_head">12 days world renunciation</string>
    <string name="seven_head_1">Part One: Knowing Yourself</string>
    <string name="seven_head_2">Part two: Getting to know the Mother of God</string>
    <string name="seven_head_3">Part Three: Knowing the Lord Jesus</string>
    <string name="novenna_head">Novena to Our Lady of Mercy</string>
    <string name="unmarked">Deselect</string>
    <string name="day">Day:</string>
    <string name="marked">Are you sure you want to deselect all days?</string>
    <string name="ok">Ok</string>
    <string name="cancel">Cancel</string>
    <string name="modlitwy_rodzaj">Select type of prayer:</string>

    <!--  Apps-->
    <string name="app_objawienia">Revelations</string>
    <string name="app_rachunek_sumienia">Examination Of Conscience</string>
    <string name="app_niewolnik_maryi">Slave of Mary</string>
    <string name="app_kalkulator_cnc">Calculator CNC</string>
    <string name="app_kalkulator_cnc_plus">Calculator CNC Plus</string>
    <string name="app_moj_rozaniec">My Rosary</string>
    <string name="app_kalendarz_liturgiczny">Liturgical Calendar</string>
    <string name="app_kalendarz_liturgiczny_plus">Liturgical Calendar Plus</string>
    <string name="app_droga_krzyzowa">Way of the Cross</string>
    <string name="app_ktoz_jak_bog">Who is like God</string>
    <string name="app_ktoz_jak_bog_plus">Who is like God Plus</string>
    <string name="app_objawienia_plus">Revelations Plus</string>
    <string name="app_niewolnik_maryi_plus">Slave of Mary Plus</string>
    <string name="app_moj_rozaniec_plus">My Rosary Plus</string>
    <string name="app_droga_krzyzowa_plus">Stations of the Cross Plus</string>
    <string name="app_rachunek_sumienia_plus">Examination of Conscience Plus</string>

    <string-array name="spinner1_items">
        <item>Dark blue</item>
        <item>Light blue</item>
        <item>Dark gray</item>
        <item>Light gray</item>
        <item>Lavender</item>
        <item>Orange</item>
        <item>Pink</item>
        <item>Rose</item>
    </string-array>

    <string-array name="spinner2_items">
        <item>Bold</item>
        <item>Standard</item>
    </string-array>

    <string-array name="spinner3_items">
        <item>Polski</item>
        <item>English</item>
    </string-array>

    <string-array name="spinner4_items">
        <item>Treatise Prayers</item>
        <item>Prayers addressed to Mary</item>
    </string-array>

    <string-array name="spinner5_items">
        <item>1982</item>
        <item>1984</item>
        <item>1985</item>
        <item>1986</item>
        <item>1987</item>
        <item>1988</item>
        <item>1989</item>
        <item>1990</item>
        <item>1991</item>
        <item>1992</item>
        <item>1993</item>
        <item>1994</item>
        <item>1995</item>
        <item>1996</item>
        <item>1997</item>
        <item>1998</item>
        <item>1999</item>
        <item>2000</item>
        <item>2001</item>
        <item>2002</item>
        <item>2003</item>
        <item>2004</item>
        <item>2005</item>
        <item>2006</item>
        <item>2007</item>
        <item>2008</item>
        <item>2009</item>
        <item>2010</item>
        <item>2011</item>
        <item>2012</item>
        <item>2013</item>
        <item>2014</item>
        <item>2015</item>
        <item>2016</item>
        <item>2017</item>
        <item>2018</item>
        <item>2019</item>
        <item>2020</item>
        <item>2021</item>
        <item>2022</item>
        <item>2023</item>
        <item>2024</item>
        <item>2025</item>
        <item>2026</item>
    </string-array>

    <string-array name="listView1_items1">
        <item>Magnificat</item>
        <item>Ave Maris Stella</item>
        <item>Prayer to Jesus Christ</item>
        <item>Prayer to Mary</item>
        <item>O Jesus living in Mary</item>
        <item>Litany to the Holy Spirit</item>
        <item>Litany to the Holy Name of Jesus</item>
        <item>Litany to the Sacred Heart of Jesus</item>
        <item>Loreto Litany</item>
        <item>Act of devotion, short version</item>
        <item>Veni Creator Spiritus</item>
        <item>Ave Maris Stella New version</item>
    </string-array>

    <string-array name="listView1_items2">
        <item>The practice of the first Saturdays of the month</item>
        <item>Lace for bloody tears of Mary</item>
        <item>The act of total surrender For life with Mary</item>
        <item>The act of dedication to Our Lady of the Scapular</item>
        <item>The act of dedication to the Immaculate Conception</item>
        <item>The Act of Entrustment to the BVM John Paul II</item>
        <item>The act of consecration to the Immaculate Heart of Mary</item>
        <item>Appeal of Jasnagora</item>
        <item>Ave Maria</item>
        <item>Hail Mary</item>
        <item>Blessed</item>
        <item>Mother of God</item>
        <item>The Sorrowful Queen of Poland</item>
        <item>Let us sing praise to the Mother, let us sing the Child</item>
        <item>To Our Lady of the Scapular</item>
        <item>Hymn To Mary</item>
        <item>Queen of Heaven</item>
        <item>Our Lady of the Reconciler of Sinners</item>
        <item>Mother of the Good Way</item>
        <item>Prayer to Our Lady of Częstochowa I</item>
        <item>Prayer to Our Lady of Częstochowa II</item>
    </string-array>

    <string-array name="listView2_items1">
        <item>Novena to Our Lady of Mercy</item>
    </string-array>
    <string name="oredzia_rok">Select year of messages:</string>
    <string name="about">About me</string>
    <string name="privacy">Privacy and policy</string>
    <string name="close">Close</string>
    <string name="full">Turn Ads off</string>
    <string name="information_tekst1">Stay updated! Go to the blog to see the latest news about my applications.</string>
    <string name="information_tekst2">Go to the blog</string>
    <string name="Move">Move to change text size</string>
    <string name="show">Don\'t show again</string>

    <string name="rate_info1">Hello. Your opinion is very important to me. Would you like to rate the app?</string>
    <string name="rate_info2">Rate</string>
    <string name="rate_info3">No, thank you"</string>

    <string name="loading">Loading…</string>


</resources>