<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    android:gravity="center|center_horizontal"
    android:orientation="vertical"
    android:padding="16dp">


    <ImageView
        android:id="@+id/imageView15"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:background="@mipmap/ic_launcher"
        android:contentDescription="@string/main_button4" />

    <TextView
        android:id="@+id/textView15"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:gravity="center_horizontal"
        android:text="@string/rate_info1"
        android:textColor="#FFFFFF" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <Button
            android:id="@+id/button_rate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="#3F51B5"
            android:textColor="#FFFFFF"
            android:text="@string/rate_info2" />

        <Button
            android:id="@+id/button_cancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="#3F51B5"
            android:textColor="#FFFFFF"
            android:text="@string/rate_info3" />

    </LinearLayout>

</LinearLayout>