<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#000000"
    android:orientation="vertical">

    <ImageView
        android:id="@+id/imageView14"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:adjustViewBounds="true"
        app:srcCompat="@drawable/blog"
        tools:ignore="ContentDescription" />

    <LinearLayout
        android:id="@+id/linearLayout6"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="10dp">

        <TextView
            android:id="@+id/textView14"
            style="@style/textView_style"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/information_tekst1" />

        <LinearLayout
            android:id="@+id/buttonLayout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:orientation="vertical">

            <Button
                android:id="@+id/message_button1"
                style="@style/button_style"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:backgroundTint="@color/button_light_blue_1"
                android:text="@string/information_tekst2"
                tools:ignore="TextContrastCheck" />

            <Button
                android:id="@+id/message_button2"
                style="@style/button_style"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:backgroundTint="@color/button_light_blue_1"
                android:text="@string/close"
                tools:ignore="TextContrastCheck" />

        </LinearLayout>

        <CheckBox
            android:id="@+id/message_checkBox"
            android:layout_width="wrap_content"
            android:layout_height="48dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="20dp"
            android:text="@string/show"
            android:textColor="@color/white"
            tools:ignore="VisualLintBounds" />
    </LinearLayout>


</LinearLayout>