<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/def_2"
    android:id="@+id/main"
    tools:context=".Activity_Settings">

    <LinearLayout
        android:id="@+id/linearLayout3"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:gravity="center_vertical"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="@+id/ad_view_container"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/textView1"
            style="@style/textView_style"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:text="@string/settings_textView1" />

        <Spinner
            android:id="@+id/spinner1"
            style="@style/spinner_style"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:drawSelectorOnTop="true" />

        <TextView
            android:id="@+id/textView3"
            style="@style/textView_style"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:text="@string/settings_textView3" />

        <Spinner
            android:id="@+id/spinner2"
            style="@style/spinner_style"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:drawSelectorOnTop="true" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:orientation="vertical">

            <Button
                android:id="@+id/button2"
                style="@style/button_style"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/settings_button2"
                android:textSize="@dimen/medium"
                tools:ignore="contentDescription" />

            <Button
                android:id="@+id/button3"
                style="@style/button_style"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/settings_button3"
                android:textSize="@dimen/medium"
                tools:ignore="contentDescription" />

            <Button
                android:id="@+id/button4"
                style="@style/button_style"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/kofi_text3"
                android:textSize="@dimen/medium"
                tools:ignore="contentDescription" />

        </LinearLayout>

    </LinearLayout>

    <FrameLayout
        android:id="@+id/ad_view_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toTopOf="@+id/bottom_toolbar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <LinearLayout
        android:id="@+id/bottom_toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="4dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <ImageButton
            android:id="@+id/button_back"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:src="@drawable/arrow_back_white_24"
            tools:ignore="contentDescription,SpeakableTextPresentCheck" />

        <TextView
            android:id="@+id/toolbar_title"
            style="@style/textView_style"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:gravity="center"
            android:paddingEnd="48dp"
            android:textColor="@color/white"
            android:textSize="@dimen/medium"
            tools:ignore="RtlSymmetry" />

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>